# voice-coding

./: .gitignore  AGENTS.md  README.md  acp-agents.json  flake.nix  package.json  pnpm-lock.yaml
docs/: AGENTS.md  TEN_VAD_BUILD_SUMMARY.md  TEN_VAD_CROSS_PLATFORM_SUMMARY.md  TEN_VAD_QUICK_REFERENCE.md  TEN_VAD_SETUP.md  VIRTUAL_AUDIO_GUIDE.md  model-path-management.md  model_inputs_report.md  model_inputs_spec.json  moss-tts-official-onnx-runtime.md  moss-tts-runtime-environment.md  moss-tts-text-normalization.md  tauri-permissions.md  vad-future-enhancements.md
openspec/: config.yaml
openspec/changes/add-moss-official-streaming-tts/: proposal.md  tasks.md
openspec/changes/add-moss-onnx-tts-engine/: design.md  tasks.md
openspec/changes/add-streaming-tts-core-api/: design.md  tasks.md
openspec/changes/add-stt-abstract-layer/: tasks.md
openspec/changes/add-stt-tests/: design.md  proposal.md
openspec/changes/backend-owned-auto-tts/: design.md  proposal.md
openspec/changes/backend-vad-recording/: design.md  tasks.md
openspec/changes/continuous-vad-listening/: proposal.md
openspec/changes/debug-moss-tts-private-params/: design.md
openspec/changes/enhance-moss-onnx-tts-official-parity/: design.md  proposal.md  tasks.md
openspec/changes/migrate-acp-to-rust-sdk/: design.md  tasks.md
openspec/changes/migrate-assistant-console-to-business-api/: design.md  proposal.md
openspec/changes/moss-tts-full-greedy-lazy-loading/: design.md  proposal.md  tasks.md
public/: AGENTS.md
scripts/: AGENTS.md  build_ten_vad.sh  cleanup_virtual_audio.sh  download_librispeech_other.py  download_model.sh  download_moss_tts_models.sh  download_ten_vad.sh  quantize_moss_tts_int8.py  setup_virtual_audio.sh  verify_onnx_inputs.py
src/: AGENTS.md  App.css  App.tsx
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: AGENTS.md  default.json
src-tauri/icons/: AGENTS.md
src-tauri/libs/: README.md
src-tauri/libs/Linux/x64/: README.md
src-tauri/libs/Windows/: README.md
src-tauri/libs/macOS/: README.md
src-tauri/src/: AGENTS.md  asr.rs  business.rs  lib.rs  main.rs  model_paths.rs  tts.rs  vad_commands.rs
src-tauri/src/acp/: AGENTS.md  client.rs  events.rs  json_rpc.rs  mod.rs  profile.rs  session.rs  timeline.rs  transport.rs
src-tauri/src/audio/: AGENTS.md  mod.rs  output.rs  recorder.rs
src-tauri/src/vad/: AGENTS.md  config.rs  engine.rs  mod.rs  state_machine.rs
src-tauri/stt-core/: AGENTS.md  Cargo.toml
src-tauri/stt-core/src/: AGENTS.md  config.rs  error.rs  input.rs  lib.rs  result.rs  session.rs  stream.rs  traits.rs
src-tauri/stt-qwen3/: AGENTS.md  Cargo.toml  QUICKREF.txt  TESTING.md  TESTING_REPORT.md  run_tests.sh
src-tauri/stt-qwen3/proptest-regressions/: AGENTS.md  prompt.txt
src-tauri/stt-qwen3/src/: AGENTS.md  decoder.rs  encoder.rs  lib.rs  output.rs  prompt.rs
src-tauri/stt-qwen3/src/audio/: AGENTS.md  loader.rs  mel.rs  mod.rs  vad.rs
src-tauri/stt-qwen3/src/models/: AGENTS.md  mod.rs  session.rs  session_manager_adapter.rs
src-tauri/stt-qwen3/src/tokenizer/: AGENTS.md  wrapper.rs
src-tauri/stt-qwen3/tests/: AGENTS.md  boundary_test.rs  engine_test.rs  integration_test.rs  performance_test.rs
src-tauri/stt-qwen3/tests/common/: AGENTS.md  fixtures.rs  mock_sessions.rs  mod.rs
src-tauri/tts-core/: AGENTS.md  Cargo.toml
src-tauri/tts-core/src/: AGENTS.md  audio.rs  config.rs  error.rs  events.rs  lib.rs  result.rs  traits.rs
src-tauri/tts-moss/: AGENTS.md  Cargo.toml
src-tauri/tts-moss/src/: AGENTS.md  assets.rs  codec_buffer.rs  config.rs  engine.rs  error.rs  lib.rs  metadata.rs  reference_audio.rs  robust.rs  sampling.rs  sessions.rs  streaming.rs  text.rs
src-tauri/tts-moss/tests/: inference.rs
src/assets/: AGENTS.md
src/components/: AGENTS.md  AgentEventStream.test.tsx  AgentEventStream.tsx  AssistantConsole.test.ts  AssistantConsole.tsx  AudioVisualizer.test.ts  AudioVisualizer.tsx  ControlButton.tsx  DebugToolsWindow.test.ts  DebugToolsWindow.tsx  TranscriptDisplay.tsx  VoiceRecorder.tsx
src/hooks/: AGENTS.md  useAgentEvents.test.ts  useAgentEvents.ts  useAgentStream.test.ts  useAgentStream.ts  useAsrStatus.test.ts  useAsrStatus.ts  useAudioRecorder.ts  useBackendVAD.test.ts  useBackendVAD.ts  useBusinessApi.test.ts  useBusinessApi.ts  useTranscription.ts  useVAD.ts
(+137 files in other folders)
