[workspace]
members = [
    ".",
    "stt-core",
    "stt-qwen3",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
once_cell = "1"

[package]
name = "voice-coding"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "voice_coding_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
stt-core = { path = "stt-core" }
stt-qwen3 = { path = "stt-qwen3", optional = true }
uuid = { version = "1.23.1", features = ["v4"] }

[features]
default = ["stt-qwen3"]
stt-qwen3 = ["dep:stt-qwen3"]
