[workspace]
members = [
    ".",
    "stt-core",
    "tts-core",
    "stt-qwen3",
    "tts-moss",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
once_cell = "1"

[package]
name = "voice-coding"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "voice_coding_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
agent-client-protocol = { version = "0.11.1", features = ["unstable_message_id"] }
agent-client-protocol-tokio = "0.11.1"
stt-core = { path = "stt-core" }
tts-core = { path = "tts-core" }
stt-qwen3 = { path = "stt-qwen3", optional = true }
tts-moss = { path = "tts-moss", optional = true }
uuid = { version = "1.23.1", features = ["v4"] }
cpal = "0.17.3"
libloading = "0.9.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tauri-plugin-log = "2"
log = "0.4.29"

[features]
default = ["stt-qwen3", "tts-moss-onnx"]
stt-qwen3 = ["dep:stt-qwen3"]
tts-mock = []
tts-moss-onnx = ["dep:tts-moss"]

[dev-dependencies]
tempfile = "3.27.0"
