[package]
name = "tts-moss"
version = "0.1.0"
edition = "2021"

[dependencies]
tts-core = { path = "../tts-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = "0.17.2"
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"] }
tokenizers = "0.22.2"
sentencepiece = "0.13.1"

[dev-dependencies]
tempfile = "3.27.0"
